# pdoo

./: .gitignore  LICENSE  README.md  pyproject.toml
pdoo/: __init__.py  document.py  dom_node.py  raw_node.py  style.py  text_node.py
test/: test_pdoo.py
